--- a/index.html
+++ b/index.html
@@ -1,21 +1,176 @@
 <!DOCTYPE html>
-<html>
-		<head>
-				<meta charset = "utf-8"/>
-				<title>Kazi Tanzim Islam</title>
-				<link rel="stylesheet" href="stylesheet1.css"/>
-		</head>
+<html lang="en">
 
-		<body>
-				<div class = "index">
-					<h1>Welcome to the homepage of Kazi Tanzim Islam!
-					</h1>
-					<p>
-					<img src="Kazi_Islam.jpg" width="400" height="400" alt="Kazi Tanzim Islam"/>
-					</p>
-			
-					<p><a href="resume.html"><span class = "sub-heading">My Resume</span></a></p>
-					<p><a href="bio.html"><span class = "sub-heading">About Me</span></a></p>	
-				</div>
-		</body>
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Kazi Islam</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+    <!-- Theme CSS -->
+    <link href="css/grayscale.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <i class="fa fa-play-circle"></i> <span class="light">Kazi</span> Islam
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#resume">Resume</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                    	<br><br><br><br>	
+                        <h1 class="brand-heading">&nbsp Kazi Islam</h1>
+
+                        <br>
+                        <br>
+                        <div id="jumbo" class="row flex fade-text">
+                        <div class="col-md-4 ">
+                        	<h3 class="fading-text fade-dreamer text-animated-one">Dreamer</h3>	
+                        </div>
+                        <div class="col-md-4 "> 
+                        	<h3 class="fading-text fade-developer text-animated-three">Developer</h3>
+                        </div>
+                        <div class="col-md-4 ">
+                        	<h3 class="fading-text fade-explorer text-animated-two">Explorer</h3>
+                       	</div>
+                       	</div>
+                       	<br><br><br><br>
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+            	<img src = "img/kazi2.gif" alt="kazi" style="width:250px;height:250px;">
+            	<p></p>
+                <h2>About Me</h2>
+                <p>Hello, world! My name is Kazi Tanzim Islam and I am a junior majoring in <font color="#337ab7">Computer Science</font> in the School of Engineering at <font color="#337ab7">Tufts University</font>. Born and raised in the city of Dhaka in Bangladesh, I moved to the United States in the year 2014 when I started college and discovered my passion for <font color="#337ab7">coding</font>. </p>
+                <p>My primary field of interest is <font color="#337ab7">Web Development</font>, but I also enjoy exploring various other areas in Computer Science through online learning platforms such as <font color="#337ab7">Coursera</font>, <font color="#337ab7">edX</font> and <font color="#337ab7">Udemy</font>. Currently, I am using online resources to teach myself <font color="#337ab7">Android Application Development</font>.</p>
+                <p>Outside academics, I am a <font color="#337ab7">music lover</font> and an avid follower of <font color="#337ab7">soccer</font> and <font color="#337ab7">cricket</font>. When I am not coding, I can be found dabbling in the acoustic guitar or cheering away for Manchester United FC or the Bangladesh National Cricket Team.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Resume Section -->
+    <section id="resume" class="content-section text-center">
+        <div class="resume-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Resume</h2>
+                    <p>You can view my Resume by clicking on the link below.</p>
+                    <a href="Resume.pdf" class="btn btn-resume btn-lg">My Resume</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contact Me</h2>
+                <p>Want to get in touch with me? Feel free to email me at
+                <a href="mailto:feedback@startbootstrap.com">kazi.islam@tufts.edu,</a>
+                </p>
+                <p>or call me at <font color="#337ab7">781-475-2327</font></p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="https://linkedin.com/in/kislam01" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/kislam01" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com/kazi.tanzim.9" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; Kazi Tanzim Islam 2016</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+
+    <!-- Theme JavaScript -->
+    <script src="js/grayscale.min.js"></script>
+
+</body>
+
 </html>
