--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <p>Want to get in touch with me? Feel free to email me at
-                <a href="mailto:feedback@startbootstrap.com">kazi.islam@tufts.edu,</a>
+                <a href="mailto:kazi.islam@tufts.edu">kazi.islam@tufts.edu,</a>
                 </p>
                 <p>or call me at <font color="#337ab7">781-475-2327</font></p>
                 <ul class="list-inline banner-social-buttons">
