--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             	<p></p>
                 <h2>About Me</h2>
                 <p>Hello, world! My name is Kazi Tanzim Islam and I am a junior majoring in <font color="#337ab7">Computer Science</font> in the School of Engineering at <font color="#337ab7">Tufts University</font>. Born and raised in the city of Dhaka in Bangladesh, I moved to the United States in the year 2014 when I started college and discovered my passion for <font color="#337ab7">coding</font>. </p>
-                <p>My primary field of interest is <font color="#337ab7">Web Development</font>, but I also enjoy exploring various other areas in Computer Science through online learning platforms such as <font color="#337ab7">Coursera</font>, <font color="#337ab7">edX</font> and <font color="#337ab7">Udemy</font>. Currently, I am using online resources to teach myself <font color="#337ab7">Android Application Development</font>.</p>
+                <p>My primary field of interest is <font color="#337ab7">Web Development</font>, but I also enjoy exploring various other areas in Computer Science through online learning platforms such as <font color="#337ab7">Coursera</font>, <font color="#337ab7">edX</font> and <font color="#337ab7">Udemy</font>.</p>
                 <p>Outside academics, I am a <font color="#337ab7">music lover</font> and an avid follower of <font color="#337ab7">soccer</font> and <font color="#337ab7">cricket</font>. When I am not coding, I can be found dabbling in the acoustic guitar or cheering away for Manchester United FC or the Bangladesh National Cricket Team.</p>
             </div>
         </div>
